# django-jobs

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py  test_build_command.py
django_jobs/: __init__.py  admin.py  apps.py  models.py  tests.py  views.py
django_jobs/management/commands/: delete_logs.py  run_jobs.py  sync_jobs.py
django_jobs/migrations/: 0001_initial.py  0002_commandlog_arguments.py  0003_extend_cron_fields.py  0004_alter_commandschedule_arguments_and_more.py
django_jobs/templates/admin/: job_status.html  run_with_args.html  view_command_args.html
django_jobs/templates/admin/django_jobs/commandschedule/: change_list.html
django_jobs/templatetags/: jobs_tag.py
examples/: requirements.txt  test_enhanced_args.py
examples/django-example-app/: README.md
examples/example_app/management/commands/: cleanup_old_data.py  generate_report.py  hello_world.py
examples/example_project/: settings.py
