[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "django-jobs"
version = "0.1.0"
description = "A Django app for managing scheduled management commands"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Berjan", email = "berjan@bruens.it"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
]
dependencies = [
    "Django>=3.2",
]

[project.urls]
Homepage = "https://github.com/berjan/django-jobs"
Repository = "https://github.com/berjan/django-jobs.git"
Issues = "https://github.com/berjan/django-jobs/issues"

[tool.setuptools]
packages = ["django_jobs"]
include-package-data = true

[tool.setuptools.package-data]
django_jobs = [
    "templates/admin/*.html",
    "migrations/*.py",
]